k8s/i2.yaml
# 定义资源的 API 版本，这里使用的是 Ingress 的 v1 版本
apiVersion: networking.k8s.io/v1
# 声明资源的类型，这里是 Ingress，用于管理 HTTP 和 HTTPS 访问
kind: Ingress
# 元数据部分，用于定义资源的名称及其他属性
metadata:
  # Ingress 的名称，用于识别该资源
  name: ingress-service
  # Annotations 定义与 Ingress 行为相关的额外配置
  annotations:
    # 指定使用的 Ingress Class，这里是 nginx
    kubernetes.io/ingress.class: nginx
    # 启用正则表达式支持，用于路径匹配
    nginx.ingress.kubernetes.io/use-regex: "true"
    # 配置重写目标路径，$1 代表捕获的路径部分
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # 指定使用 cert-manager 创建的证书颁发者
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # 启用 HTTPS 重定向，强制将 HTTP 请求重定向到 HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
# Ingress 规则的定义部分
spec:
  # 配置 TLS（传输层安全性）相关的设置
  tls:
    - hosts:
        # 列出绑定到证书的主机名
        - yourdomain.com
        - www.yourdomain.com
      # 指定存储证书的 Secret 名称
      secretName: yourdomain-com
  # 配置 HTTP 和 HTTPS 请求的路由规则
  rules:
    # 定义与主域名相关的规则
    - host: yourdomain.com
      http:
        paths:
          # 配置路径规则，使用正则表达式匹配根路径及其子路径
          - path: /?(.*)
            pathType: Prefix # 路径匹配类型，Prefix 表示匹配前缀
            backend:
              # 定义后端服务和端口
              service:
                name: client-cluster-ip-service # 后端服务名称
                port:
                  number: 3000 # 后端服务端口
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
    # 定义与子域名相关的规则
    - host: www.yourdomain.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
